--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,18 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Firebase
+.firebase/
+firebase-debug.log
+firestore-debug.log
+ui-debug.log
+
+# Test results
+test-results/
+emulator-results/
+emulator-report/
+usability-results/
+usability-report/
+performance-results/
+performance-report/
