修復 Vercel 部署問題：解決 top-level await 錯誤
- 修復 index.html 中的 top-level await 問題，將 Firebase 初始化包裝在 async 函數中
- 更新 vite.config.ts 和 tsconfig.json 目標為 ES2022 以支持現代 JavaScript 功能
- 修復 package.json 中重複的 devDependencies 部分
- 添加 vercel.json 配置文件以確保正確的部署設置
- 本地構建測試通過，無錯誤和警告

--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
     "firebase-tools": "^13.0.0",
     "@firebase/rules-unit-testing": "^3.0.0",
     "concurrently": "^8.2.0",
-    "wait-on": "^7.2.0"
-  },
-  "devDependencies": {
+    "wait-on": "^7.2.0",
     "@axe-core/playwright": "^4.10.2",
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
